--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "ajv": "^8.11.0",
+    "ajv-errors": "^3.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3"
   }
