commiting vscode settings for color

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "peacock.color": "#eb0202",
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#e00000",
-        "activityBar.activeBorder": "#00bf00",
-        "activityBar.background": "#e00000",
+        "activityBar.activeBackground": "#fd2323",
+        "activityBar.activeBorder": "#015f01",
+        "activityBar.background": "#fd2323",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#00bf00",
+        "activityBarBadge.background": "#015f01",
         "activityBarBadge.foreground": "#e7e7e7",
-        "sash.hoverBorder": "#e00000",
-        "statusBar.background": "#ad0000",
+        "sash.hoverBorder": "#fd2323",
+        "statusBar.background": "#eb0202",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#e00000",
-        "statusBarItem.remoteBackground": "#ad0000",
+        "statusBarItem.hoverBackground": "#fd2323",
+        "statusBarItem.remoteBackground": "#eb0202",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#ad0000",
+        "titleBar.activeBackground": "#eb0202",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#ad000099",
+        "titleBar.inactiveBackground": "#eb020299",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
     "peacock.remoteColor": "#ad0000"
