--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ajv-errors": "^3.0.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mysql": "^2.18.1"
   }
 }
