--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "ajv": "^8.11.0",
     "ajv-errors": "^3.0.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.3"
   }
 }
