--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ajv": "^8.11.0",
     "ajv-errors": "^3.0.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mysql2": "^2.3.3"
